CompletionProvider: add missing GI annotation

https://bugzilla.gnome.org/show_bug.cgi?id=742015